[MOD] index.html dan CSS

--- a/marathon3.html
+++ b/marathon3.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-         <img src="assets/ILC.png">
+    <header class="banner">
+         <img src ="assets/ILC.png">
     </header>
     <nav class="main-nav">
         <ul>
@@ -49,6 +49,7 @@
                 <label for="email">Email : </label> <br>
                 <input type="email" name="email" placeholder="Type email here" required>
                 <br><br>
+                <label for="password">Password : </label> <br>
                 <input type="password" id="password" placeholder="password">
                 <br><br>
                 <label for="file">Foto Profile : </label> <br>
@@ -66,7 +67,7 @@
                 <button type="submit" id="submit-form">Daftar</button>
 
             </form>
-                <img src="assets/Logo-ILC.png" alt="logo ilc">
+            <img src="assets/Logo-ILC.png" alt="logo ilc">
         </section>
         
     </main>
